After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 699020 - GtkImage: do not leak metrics in baseline align
GtkImage: do not leak metrics in baseline align
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: .General
unspecified
Other All
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2013-04-27 09:19 UTC by Paolo Borelli
Modified: 2013-04-27 11:59 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
GtkImage: do not leak metrics in baseline align (793 bytes, patch)
2013-04-27 09:19 UTC, Paolo Borelli
accepted-commit_now Details | Review

Description Paolo Borelli 2013-04-27 09:19:48 UTC
Plug leak in the new baseline code
Comment 1 Paolo Borelli 2013-04-27 09:19:50 UTC
Created attachment 242647 [details] [review]
GtkImage: do not leak metrics in baseline align
Comment 2 Cosimo Cecchi 2013-04-27 10:26:34 UTC
Review of attachment 242647 [details] [review]:

Sure