GtkImage: do not leak metrics in baseline align

https://bugzilla.gnome.org/show_bug.cgi?id=699020